--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -21,32 +21,6 @@ h2 {
   font-size: 20px;
 }
 
-/* Boutons principaux du site */
-.btn-primary {
-  background-color: var(--color-button);
-  border-color: var(--color-button);
-  color: var(--bs-secondary); /* texte marron */
-  font-weight: 500;
-}
-
-/* Hover */
-.btn-primary:hover {
-  background-color: var(--color-button);
-  border-color: var(--color-button);
-  opacity: 0.85;
-  color: var(--bs-secondary);
-}
-
-/* Boutons : focus / active (évite le bleu Bootstrap) */
-.btn-primary:focus,
-.btn-primary:active,
-.btn-primary:focus-visible {
-  background-color: var(--color-button);
-  border-color: var(--color-button);
-  box-shadow: 0 0 0 0.2rem var(--color-shadow-card);
-  color: var(--bs-secondary);
-}
-
 /* Les liens et icônes héritent de la couleur du parent */
 a,
 i {
@@ -69,42 +43,43 @@ i {
   object-fit: contain;
 }
 
-/* CATEGORY CARDS */
+/* CARTES CATÉGORIES (CATALOGUE) */
 .category-card {
   transition: transform 0.2s ease, box-shadow 0.2s ease;
   box-shadow: 0 2px 8px var(--color-shadow-card);
 }
 
+/* Effet au survol des cartes catégories */
 .category-card:hover {
   transform: translateY(-5px);
   box-shadow: 0 4px 16px var(--color-shadow-card);
 }
 
+/* Image dans les cartes catégories */
 .category-card-img {
   max-height: 170px;
   object-fit: contain;
 }
 
-/* IMAGE PRODUIT COUP DE CŒUR page catalogue */
-.product-highlight-img {
-  max-width: 400px;
-}
-
+/* CARTES PRODUITS (PUBLIC) */
 .product-card {
   background-color: var(--bs-secondary);
   border-radius: 10px;
   box-shadow: 0 4px 10px var(--color-shadow-card);
 }
 
+/* Titre du produit */
 .product-title {
   font-size: 1.1rem;
   color: var(--bs-dark);
 }
 
+/* Prix du produit */
 .product-price {
   font-weight: bold;
 }
 
+/* Bouton "voir plus" produit */
 .product-btn-more {
   width: 90px;
   height: 90px;
@@ -119,29 +94,16 @@ i {
   color: var(--bs-light);
 }
 
+/* Bouton "voir plus" produit */
 .product-image {
   max-height: 120px;
   object-fit: contain;
 }
 
-/* Flèche select */
+/* FORMULAIRES — SELECT */
+/* Personnalisation de la flèche du select */
 .form-select {
   color: var(--bs-primary);
 
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3E%3Cpolyline points='4,6 8,10 12,6' fill='none' stroke='%23a2845e' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
-}
-
-/* Formulaire page contact*/
-/* Placeholder inputs et textarea */
-.form-control::placeholder,
-textarea.form-control::placeholder {
-  color: var(--bs-primary); /* couleur marron du thème */
-  opacity: 0.6; /* placeholder plus léger */
-}
-
-/* Style au focus (clic dans input / select) */
-.form-control:focus,
-.form-select:focus {
-  border-color: var(--bs-primary); /* bordure marron */
-  box-shadow: 0 0 0 0.2rem var(--color-shadow-card); /* halo marron */
 }
